<resources>
    <string name="app_name">ShopIt</string>

    <!-- Label for overflow menu option  [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All stock</string>
    <string name="action_delete">Delete</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no stock for sale</string>
    <string name="empty_view_subtitle_text">Get started by adding an item to sell</string>

    <!-- Title for the activity[CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_stock">Add Stock</string>
    <string name="editor_activity_title_edit_stock">Edit Stock</string>

    <!-- Label for editor menu option [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Toast message in editor [CHAR LIMIT=NONE] -->
    <string name="editor_insert_stock_successful">Stock saved</string>
    <string name="editor_insert_stock_failed">Error with saving Stock</string>
    <string name="editor_update_stock_successful">Stock updated</string>
    <string name="editor_update_stock_failed">Error with updating Stock</string>
    <string name="editor_delete_stock_successful">Stock deleted</string>
    <string name="editor_delete_stock_failed">Error with deleting Stock</string>
    <string name="negative_quantity">Stock can\'t have a negative quantity</string>
    <string name="no_quantity">Enter some value</string>
    <string name="quantity_limit">Value can\'t be more than 100.</string>
    <string name="require_attributes">The stock requires more information</string>
    <string name="require_image">The Item requires an image</string>
    <string name="require_name">The Item requires a name</string>

    <string name="sale_button">Sale made</string>
    <string name="sale_successful">Stock sold</string>
    <string name="sale_unsuccessful">No more stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="in_stock">In Stock</string>

    <!-- Dialog message  [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this stock?</string>
    <string name="delete_dialog_all_items">Delete all items?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_all_items_successful">Items deleted</string>
    <string name="editor_delete_all_items_failed">Error with deleting all items</string>


    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_overview">Stock</string>
    <string name="overview">Product Overview</string>
    <string name="email_subject">Restock needed</string>
    <string name="email_body">Stock items to be restock are:" "</string>
    <string name="email_extra">Quantity: 10(default)</string>


    <!-- Label for the editor [CHAR LIMIT=30] -->
    <string name="product_price">Price</string>
    <string name="price_symbol">£</string>
    <string name="stock">Quantity</string>
    <string name="quantity">0</string>

    <!-- Text hint in the editor [CHAR LIMIT=30] -->
    <string name="hint_name">Name</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_price">Price</string>


    <!-- Label for dropdown menu option for the type of stock [CHAR LIMIT=20] -->
    <string name="product_type">Type</string>
    <string name="type_unknown">Unknown</string>
    <string name="type_one">Perishable</string>
    <string name="type_two">Non-perishable</string>
    <string name="unknown_type">Unknown supplier</string>

    <string name="dummy_picture_uri">android.resource://com.example.android.shopit/drawable/supplier</string>
</resources>
